refactor code, add cenhome spider